--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WhiteBoard!</title>
-    <link rel="stylesheet" href="./css/board.css">
+    <link rel="stylesheet" href="/css/board.css">
 </head>
 <body>
     <div class="container">
@@ -19,6 +19,6 @@
         <button class="color" data-color="erase"></button>
         <button class="color" data-color="clear"></button>
     </div>
-    <script type="text/javascript" src="./js/board.js"></script>
+    <script type="text/javascript" src="/js/board.js"></script>
 </body>
 </html>
