--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <button class="color" data-color="green"></button>
         <button class="color" data-color="blue"></button>
         <button class="color" data-color="black"></button>
-        <button class="color" data-color="orangered"></button>
+        <button class="color" data-color="yellow"></button>
         <button class="color" data-color="erase"></button>
         <button class="color" data-color="clear"></button>
     </div>
